<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="it.libero.alessandragenca.notemanagerandroidclient.MainActivity">

    <TextView
...
        android:id="@+id/buttonGETNOTEBYDATE"
        android:layout_width="150dp"

        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonremove2"
        android:background="@android:color/holo_blue_bright"
        android:text="Get Note By Date"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/buttonget"
...
